--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: vasu bandaru
-subtitle: This is where I will tell my friends way too much about me
+title: all about data
+subtitle: This is where I will share some of my learnings
 use-site-title: true
 ---
 
